fixed spacing issues

--- a/src/static/Home.css
+++ b/src/static/Home.css
@@ -69,6 +69,9 @@
         flex-direction: column;
         margin-top: 25px;
     }
+    .island-and-logo {
+        margin-bottom: 40px;
+    }
     .island {
         width: 150px;
         height: 150px;
@@ -134,7 +137,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 150px;
+    margin-bottom: 100px;
     width: 100vw;
     height: auto;
 }
